--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   height: 5.6rem;
-  position: absolute;
+  position: relative;
   z-index: 1;
   width: 100%;
   background-color: var(--black);
