--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -8,6 +8,7 @@
   --light-gray: #d3d3d3;
   --white: #fff;
   --black: #191919;
+  --overlay: #00000086;
   --text: rgba(0, 0, 0, 0.5);
   --text-light: rgba(255, 255, 255, 0.5);
   --divider: rgba(255, 255, 255, 0.1);
