--- a/src/components/Header/SubComponents/CartItem/CartItem.module.scss
+++ b/src/components/Header/SubComponents/CartItem/CartItem.module.scss
@@ -7,7 +7,7 @@
 
   &__product {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     &__image {
       border-radius: 10px;
