--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   height: 5.6rem;
-  position: absolute;
+  position: relative;
   z-index: 1;
   width: 100%;
   background-color: var(--black);
@@ -11,8 +11,8 @@
     justify-content: space-between;
     border-bottom: 1px solid var(--divider);
   }
-  &__links {
-    display: none;
+  &__nav-links {
+    display: none !important;
   }
   &__cart-button {
     background-color: transparent;
@@ -35,27 +35,8 @@
     }
   }
   @media screen and (min-width: 62rem) {
-    &__links {
-      display: flex;
-    }
-    &__links {
-      display: flex;
-      list-style-type: none;
-      a {
-        text-decoration: none;
-        text-transform: uppercase;
-        font-size: 0.9rem;
-        font-weight: 500;
-        letter-spacing: 1px;
-        color: var(--white);
-        transition: color 300ms;
-        &:hover {
-          color: var(--accent);
-        }
-      }
-      li {
-        padding: 0rem 1rem;
-      }
+    &__nav-links {
+      display: flex !important;
     }
   }
 }
