--- a/src/components/Shared/Categories/Categories.module.scss
+++ b/src/components/Shared/Categories/Categories.module.scss
@@ -45,6 +45,11 @@
           color: var(--accent);
         }
       }
+      &:hover {
+        span {
+          color: var(--accent);
+        }
+      }
     }
   }
 
