feat: Product List Page
Add product banner. Display products by category.  Add Loader. Responsive from mobile to Desktop

--- a/src/components/Categories/Categories.module.scss
+++ b/src/components/Categories/Categories.module.scss
@@ -17,6 +17,8 @@
   &__image {
     margin-top: -70px;
     object-fit: contain;
+    width: 200px;
+    height: 170px;
   }
   &__title {
     margin: 0 0 0.2rem 0;
