--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -178,6 +178,7 @@
 .banner-background {
   flex-direction: unset;
   text-align: start;
+  overflow: hidden;
   border-radius: 10px;
   &__image-container {
     &__image {
@@ -199,6 +200,9 @@
 .banner-card {
   &__image-container {
     margin-bottom: 2rem;
+    &__image {
+      max-height: 300px;
+    }
   }
   &__content {
     border-radius: 10px;
@@ -381,8 +385,8 @@
     height: 350px;
     &__image-container {
       &__image {
-        object-position: 10% 100%;
-        height: revert-layer;
+        width: 100%;
+        height: 350px;
       }
     }
     &__content {
