--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .header {
   height: 5.6rem;
-  position: relative;
-  z-index: 1;
+  position: absolute;
+  z-index: 10;
   width: 100%;
   background-color: var(--black);
   .wrapper {
@@ -11,8 +11,8 @@
     justify-content: space-between;
     border-bottom: 1px solid var(--divider);
   }
-  &__nav-links {
-    display: none !important;
+  &__navigation {
+    display: none;
   }
   &__cart-button {
     background-color: transparent;
@@ -35,8 +35,8 @@
     }
   }
   @media screen and (min-width: 62rem) {
-    &__nav-links {
-      display: flex !important;
+    &__navigation {
+      display: flex;
     }
   }
 }
