--- a/src/components/common/overlay/Overlay.module.scss
+++ b/src/components/common/overlay/Overlay.module.scss
@@ -1,10 +1,10 @@
 .overlay {
   display: flex;
   position: fixed;
-  top: 5.6rem;
+  top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
-  z-index: 1;
+  height: 400vh;
+  z-index: -1;
   background-color: var(--overlay);
 }
