--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -60,12 +60,22 @@
   font-size: 0.9rem;
   font-weight: 500;
 
+  transition: background-color 300ms;
+  &:hover {
+    background-color: var(--accent-light);
+  }
+
   &.banner-background__button,
   &.banner-card__button {
     padding: 15px 35px;
     background-color: transparent;
     border: 1px solid var(--black);
     color: var(--black);
+
+    &:hover {
+      background-color: var(--black);
+      color: var(--white);
+    }
   }
 }
 
@@ -156,6 +166,13 @@
     box-shadow: 0px 0px 5px -4px var(--black);
     font-size: 0.9rem;
     font-weight: 500;
+    border: 1px solid var(--black);
+
+    &:hover {
+      background-color: transparent;
+      color: var(--black);
+      border: 1px solid var(--black);
+    }
   }
 }
 .banner-background {
