Add type on error in apollo client

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,7 +3,7 @@
 :root {
   --bg: #fafafa;
   --accent: #d87d4a;
-  --accent-light: #fbaf85;
+  --accent-light: rgb(225, 142, 98);
   --gray: #f1f1f1;
   --light-gray: #d3d3d3;
   --white: #fff;
