--- a/src/components/ProductBanner/ProductBanner.module.scss
+++ b/src/components/ProductBanner/ProductBanner.module.scss
@@ -54,6 +54,10 @@
     box-shadow: 0px 0px 5px -4px var(--black);
     font-size: 0.9rem;
     font-weight: 500;
+
+    &:hover {
+      background-color: var(--accent-light);
+    }
   }
 }
 @media screen and (min-width: 40rem) {
