--- a/src/components/Shared/BackButton/BackButton.module.scss
+++ b/src/components/Shared/BackButton/BackButton.module.scss
@@ -3,3 +3,14 @@
   color: var(--text);
   font-size: 1rem;
 }
+
+.container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 1rem 0;
+
+  @media screen and (min-width: 40rem) {
+    margin: 3rem 0;
+  }
+}
