refactor: Adjust width of product details Image. Adjust text align in Cart Item

--- a/src/components/Header/SubComponents/CartItem/CartItem.module.scss
+++ b/src/components/Header/SubComponents/CartItem/CartItem.module.scss
@@ -22,6 +22,7 @@
 
     &__details {
       margin-left: 1rem;
+      text-align: start;
       h4 {
         color: var(--black);
         margin: 0rem;
@@ -37,7 +38,7 @@
     }
   }
   &__quantity {
-    width: 90px;
+    width: 80px;
     background-color: var(--gray);
     display: flex;
     justify-content: space-between;
