--- a/src/components/CheckoutForm/Summary/Summary.module.scss
+++ b/src/components/CheckoutForm/Summary/Summary.module.scss
@@ -75,6 +75,7 @@
   }
   &:disabled {
     background-color: var(--gray);
+    color: var(--text-light);
     &:hover {
       background-color: none;
       cursor: unset;
