--- a/src/components/Shared/Banner/Banner.module.scss
+++ b/src/components/Shared/Banner/Banner.module.scss
@@ -31,8 +31,9 @@
       font-weight: 500;
       letter-spacing: 0.5rem;
 
-      span {
+      em {
         color: var(--accent);
+        font-style: normal ;
       }
     }
     span {
@@ -121,7 +122,7 @@
       color: var(--white);
       text-align: center;
       h2 {
-        font-size: 2.5rem;
+        font-size: 1.7rem;
       }
       p {
         margin-bottom: 3rem;
