--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,18 +2,14 @@
 
 :root {
   --bg: #fafafa;
-  --accent: #d87d4a;
+  --accent: #c5703e;
   --accent-light: #e18e62;
   --gray: #f1f1f1;
-  --light-gray: #d3d3d3;
   --white: #fff;
   --black: #191919;
   --overlay: #00000086;
-  --text: #00000080;
-  --text-light: #ffffff80;
-  --divider: #ffffff1a;
-  --placeholder: #00000066;
-  --input-border: #cfcfcf;
+  --text: #6a6a6a;
+  --text-light: #c6c6c6b1;
   --input-error: #cd2c2c;
 }
 html,
