--- a/src/components/Header/SubComponents/CartModal/CartModal.module.scss
+++ b/src/components/Header/SubComponents/CartModal/CartModal.module.scss
@@ -34,7 +34,7 @@
   box-shadow: 0px 10px 15px -10px var(--black);
   background-color: var(--white);
   border-radius: 15px;
-  position: absolute;
+  position: fixed;
   right: 1rem;
   left: 1rem;
   top: 7rem;
@@ -61,15 +61,20 @@
   }
 
   @media screen and (min-width: 40rem) {
+    position: absolute;
     width: 400px;
-    right: 5rem;
+    right: 1rem;
     left: auto;
+  }
+  @media screen and (min-width: 62rem) {
+    right: 5rem;
   }
 }
 .cart-total {
   display: flex;
   justify-content: space-between;
   margin: 2rem 0;
+  align-items: center;
   span {
     color: var(--text);
     text-transform: uppercase;
