--- a/src/components/ProductDetails/ProductDetails.module.scss
+++ b/src/components/ProductDetails/ProductDetails.module.scss
@@ -1,58 +1,25 @@
 .product {
   &__details {
     margin-bottom: 5rem;
-    &__image-container {
-      margin-bottom: 3rem;
-      &__image {
-        width: 100%;
-        border-radius: 10px;
-        object-fit: cover;
-      }
-    }
-
-    &__content {
-      h2 {
-        font-size: 2rem;
-        font-weight: 500;
-        letter-spacing: 2px;
-        margin: 1rem 0;
-      }
-      &__tag {
-        color: var(--accent);
-        letter-spacing: 0.5rem;
-        text-transform: uppercase;
-      }
-      &__description {
-        color: var(--text);
-        margin-bottom: 2rem;
-      }
-      &__price {
-        font-weight: 700;
-        font-size: 1.2rem;
-      }
+    text-align: center;
+    &__price {
+      font-weight: 700;
     }
   }
   &__recommendation {
-    margin-top: 10rem;
+    &-title {
+      margin-top: 10rem;
+      margin-bottom: 2rem;
+      text-align: center;
+      text-transform: uppercase;
+      font-size: 2rem;
+    }
   }
 
   @media screen and (min-width: 40rem) {
     &__details {
       display: flex;
       justify-content: space-between;
-      &__image-container {
-        margin-bottom: 0;
-        max-width: 50%;
-        &__image {
-          height: 500px;
-        }
-      }
-      &__content {
-        max-width: 45%;
-        h2 {
-          font-size: 2.5rem;
-        }
-      }
     }
     &__recommendation {
       display: flex;
@@ -66,6 +33,11 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+    }
+  }
+  @media screen and (min-width: 62rem) {
+    &__details {
+      text-align: start;
     }
   }
 }
