--- a/src/components/common/form-control/FormInput.module.scss
+++ b/src/components/common/form-control/FormInput.module.scss
@@ -21,11 +21,11 @@
   &__input {
     width: 100%;
     padding: 15px 10px;
-    border: 1px solid var(--input-border);
+    border: 1px solid var(--gray);
     border-radius: 5px;
     margin-bottom: 1rem;
     &::placeholder {
-      color: var(--placeholder);
+      color: var(--text-light);
       font-weight: 600;
     }
     &--error {
