--- a/src/components/common/form-control/FormRadio.module.scss
+++ b/src/components/common/form-control/FormRadio.module.scss
@@ -4,7 +4,7 @@
   margin-bottom: 0.5rem;
   width: 100%;
   padding: 15px 10px;
-  border: 1px solid var(--input-border);
+  border: 1px solid var(--gray);
   border-radius: 5px;
   .radio {
     position: relative;
